<resources>
    <string name="client_id">112869145235-krm52qb7cpssl0vg3msij595mnnh5r5d.apps.googleusercontent.com</string>

    <string name="app_name">Loan Calculator</string>
    <string name="title_activity_loan">Loan Calculator</string>
    <string name="title_activity_add_loan">New Loan</string>
    <string name="empty_view">Empty View</string>
    <string name="no_data_found">No Data Found</string>

    <string name="list_error_no_network">No Network Available</string>
    <string name="list_error_no_loans">Error Retrieving Loans</string>
    <string name="retry">Retry</string>
    <string name="loading_icon">Loading Icon</string>
    <string name="loan_name">Loan Name</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="total_balance">Current Balance</string>
    <string name="loans_title">Loan Accounts</string>
    <string name="refresh_icon">refresh icon</string>
    <string name="sheet_provider">Provider</string>
    <string name="sheet_balance">Balance</string>
    <string name="sheet_interest">Interest</string>
    <string name="sheet_base_payment">Base Payment</string>
    <string name="sheet_extra_payment">Extra Payment</string>
    <string name="sheet_repayment_start_date">Repayment Start Date</string>
    <string name="error_retrieving_data_try_again">Error retrieving data! Try Again!</string>
    <string name="add_loan_basic_information_intro">Let\'s start with some basic information…</string>
    <string name="add_loan_loan_name_hint">My Awesome Loan</string>
    <string name="loan_name_loan_name_label">Loan Name:</string>
    <string name="loan_provider_label">Loan Provider:</string>
    <string name="loan_provider_hint">Bank 1234</string>
    <string name="let_s_create_a_new_loan">Let\'s create a new loan!</string>
    <string name="let_s_create_new_loan_hint">Don\'t worry this will be nice and easy. We\'ll walk you through this process, and remember, you can always edit your inputs later!</string>
    <string name="start">Start</string>
    <string name="let_s_get_start_image">Let\'s Get Start Image</string>
    <string name="backpack_graphic">Backpack graphic</string>
    <string name="backdrop_content">backdrop content</string>
    <string name="add_loan_balance_title">Let\'s establish the money</string>
    <string name="add_loan_balance_balance_label">Loan Balance</string>
    <string name="_99_999_99">$99,999.99</string>
    <string name="base_payments">Base Payments</string>
    <string name="add_loan_balance_base_payment_hint">$215.00</string>
    <string name="loan_balance_base_payment_help">Base payment is is the amount you are paying per month</string>
    <string name="add_loan_balance_extra_hint">$0.00</string>
    <string name="add_loan_balance_extra_payment_label">Extra Payments</string>
    <string name="add_loan_balance_extra_payments">This is the extra amount of money you\'re willing to contribute in the futere. You can come back and change this later</string>
    <string name="add_loan_interest_apr">Interest (APR)</string>
    <string name="add_loan_interest_apr_hint">1.11%</string>
    <string name="add_loan_other_repayment_start_date">Repayment Start Date</string>
    <string name="add_loan_repayment_start_date">Help Me Calculate</string>
    <string name="add_loan_other_repayment_hint">mm/dd/yyyy</string>
    <string name="few_more_questions_and_you_re_done">Few More questions, and you\'re done!</string>
    <string name="add_loan_edit">Edit</string>
    <string name="add_loan_review_title">Review Information Below</string>
    <string name="add_loan_basic_info">Basic Information</string>
    <string name="add_loan_balance_info">Balance Information</string>
    <string name="add_loan_other_info">Other Information</string>
    <string name="add_loan_submit">Submit</string>
    <string name="google_log_in">Google Log In</string>
    <string name="welcome_please_login_then_we_can_start_your_experience">Welcome! Please Login, then we can start your experience!</string>
    <string name="title_activity_login">Login Activity</string>
    <string name="delete_button">Delete Button</string>
    <string name="background_drop">background drop</string>
</resources>
