<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:visibility="visible"
    tools:background="@drawable/background_gradients"
    tools:context=".ui.addloan.AddLoanActivity"
    tools:ignore="UseCompoundDrawables"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_loan_balance_title"
            style="@style/AddNewLoanText.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin_large"
            android:paddingTop="64dp"
            android:text="@string/add_loan_balance_title" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/add_loan_balance_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                style="@style/AddNewLoanText.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:text="@string/add_loan_balance_balance_label" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/add_loan_balance_balance"
                style="@style/AddNewLoanText.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/_99_999_99"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_loan_balance_base_payment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="42"
                android:orientation="vertical">

                <TextView
                    style="@style/AddNewLoanText.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/base_payments" />

                <TextView
                    style="@style/AddNewLoanText.Explanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/loan_balance_base_payment_help" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/add_loan_balance_base_payment"
                style="@style/AddNewLoanText.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/add_loan_balance_base_payment_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_loan_balance_extra_payment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="42"
                android:orientation="vertical">

                <TextView
                    style="@style/AddNewLoanText.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_loan_balance_extra_payment_label" />

                <TextView
                    style="@style/AddNewLoanText.Explanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_loan_balance_extra_payments" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/add_loan_balance_extra_payment"
                style="@style/AddNewLoanText.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/add_loan_balance_extra_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>