<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:visibility="gone"
    tools:ignore="UseCompoundDrawables"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/empty_view_icon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/empty_view"
        android:src="@drawable/ic_icon_error"
        tools:ignore="MissingPrefix" />

    <TextView
        android:id="@+id/empty_view_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/no_data_found"
        android:textSize="20sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/empty_view_retry_button"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@color/colorPrimary"
        android:text="@string/retry"
        android:textColor="@android:color/white"
        android:visibility="gone" />

</LinearLayout>