<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:visibility="visible"
    tools:background="@drawable/background_gradients"
    tools:context=".ui.addloan.AddLoanActivity"
    tools:ignore="UseCompoundDrawables"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_loan_other_title"
            style="@style/AddNewLoanText.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin_large"
            android:paddingTop="64dp"
            android:text="@string/few_more_questions_and_you_re_done" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/add_loan_other_interst_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                style="@style/AddNewLoanText.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:text="@string/add_loan_interest_apr" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/add_loan_other_interest"
                style="@style/AddNewLoanText.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/add_loan_interest_apr_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_loan_other_repayment_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="42"
                android:orientation="vertical">

                <TextView
                    style="@style/AddNewLoanText.Label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_loan_other_repayment_start_date" />

                <TextView
                    android:id="@+id/add_loan_other_repayment_help"
                    style="@style/AddNewLoanText.Explanation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_loan_repayment_start_date"
                    android:textColor="@android:color/holo_blue_bright" />
            </LinearLayout>

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/add_loan_other_repayment"
                style="@style/AddNewLoanText.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/add_loan_other_repayment_hint"
                android:inputType="numberDecimal" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>