<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:visibility="visible"
    tools:background="@drawable/background_gradients"
    tools:context=".ui.addloan.AddLoanActivity"
    tools:ignore="UseCompoundDrawables"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/add_loan_basic_title"
            style="@style/AddNewLoanText.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin_large"
            android:paddingTop="64dp"
            android:text="@string/add_loan_basic_information_intro" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/add_loan_loan_name_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                style="@style/AddNewLoanText.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:text="@string/loan_name_loan_name_label" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/add_loan_basic_loan_name"
                style="@style/AddNewLoanText.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/add_loan_loan_name_hint" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/add_loan_loan_provider_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <TextView
                style="@style/AddNewLoanText.Label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="35"
                android:text="@string/loan_provider_label" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/add_loan_basic_loan_provider"
                style="@style/AddNewLoanText.EditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:hint="@string/loan_provider_hint" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>