<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/empty_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:orientation="vertical"
    android:visibility="visible"
    tools:background="@drawable/background_gradients"
    tools:context=".ui.addloan.AddLoanActivity"
    tools:ignore="UseCompoundDrawables"
    tools:visibility="visible">

    <TextView
        android:id="@+id/lets_get_started_title"
        style="@style/AddNewLoanText.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin_large"
        android:layout_marginTop="64dp"
        android:text="@string/let_s_create_a_new_loan" />

    <ImageView
        android:id="@+id/lets_get_started_intro"
        android:layout_width="match_parent"
        android:layout_height="256dp"
        android:layout_below="@+id/lets_get_started_title"
        android:layout_centerInParent="true"
        android:contentDescription="@string/let_s_get_start_image"
        android:gravity="center_horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="invisible"
        tools:src="@drawable/graduation"
        tools:visibility="visible" />

    <TextView
        style="@style/AddNewLoanText.Label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lets_get_started_intro"
        android:layout_marginTop="@dimen/activity_vertical_margin_large"
        android:text="@string/let_s_create_new_loan_hint"
        android:textAlignment="center" />

    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin_large"
        android:background="@color/colorAccent"
        android:text="@string/start"
        android:textColor="@color/colorPrimaryDark" />

</RelativeLayout>