<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/loan_sheet_bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_gradients"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <RelativeLayout
            android:id="@+id/loan_sheet_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/loan_sheet_name"
                style="@style/BottomSheetDialogHeaderText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="RelativeOverlap"
                tools:text="App Name" />

            <ImageView
                android:id="@+id/loan_delete"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/activity_horizontal_margin_small_spacing"
                android:contentDescription="@string/delete_button"
                android:src="@drawable/ic_delete_icon_white" />

            <ImageView
                android:id="@+id/loan_edit"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_toStartOf="@+id/loan_delete"
                android:contentDescription="@string/refresh_icon"
                android:gravity="end"
                android:src="@drawable/ic_edit_icon_white" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <com.github.tehras.loanapplication.ui.home.HomePaymentsChartLayout
                android:id="@+id/loan_sheet_chart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                android:id="@+id/loading_layout"
                layout="@layout/transparent_loading_view"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_centerInParent="true" />

            <LinearLayout
                android:id="@+id/loan_sheet_error_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/loan_sheet_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/activity_horizontal_margin"
                    android:layout_marginStart="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/error_retrieving_data_try_again"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/loan_error_refresh"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/refresh_icon"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingEnd="@dimen/activity_horizontal_margin"
                    android:paddingStart="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:src="@drawable/ic_refresh_icon_white" />

            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">

                <TextView
                    style="@style/BottomSheetDialogLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sheet_provider" />

                <TextView
                    style="@style/BottomSheetDialogLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sheet_balance" />

                <TextView
                    style="@style/BottomSheetDialogLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sheet_interest" />

                <TextView
                    style="@style/BottomSheetDialogLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sheet_base_payment" />

                <TextView
                    style="@style/BottomSheetDialogLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sheet_extra_payment" />

                <TextView
                    style="@style/BottomSheetDialogLabelText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sheet_repayment_start_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="50"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/loan_sheet_provider"
                    style="@style/BottomSheetDialogValueText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Chase" />

                <TextView
                    android:id="@+id/loan_sheet_balance"
                    style="@style/BottomSheetDialogValueText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="$24,000" />

                <TextView
                    android:id="@+id/loan_sheet_interest"
                    style="@style/BottomSheetDialogValueText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="6.32%" />

                <TextView
                    android:id="@+id/loan_sheet_base_payment"
                    style="@style/BottomSheetDialogValueText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="$200.00" />

                <TextView
                    android:id="@+id/loan_sheet_extra_payment"
                    style="@style/BottomSheetDialogValueText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="$25.33" />

                <TextView
                    android:id="@+id/loan_sheet_start_date"
                    style="@style/BottomSheetDialogValueText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="March 20th 1991" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <include
        layout="@layout/loading_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</FrameLayout>